20131002 2013-102  (1135 prefixes)
 - added:   cdtype fincaselaw finlaw

 - new method SET to add/modify mappings

20130930 2013-0930 (1132 prefixes)

 - new rdfns command line argument --version
 - fix Changes creation via update.pl
 - fix Changes to comply w/CPAN::Changes::Spec

20130926 2013-09-26 (1132 prefixes)

 - fixed documentation
 - new format 'json' for JSON-LD

20130924 2013-09-24 (1132 prefixes)
 - added:   alchemy archdesc cosmo cro dbpo dt frbrer frsad gndo icane ludo oj 
            oliasystem orca saif sdmxa sdmxd stream tsioc twaapi wd who 
            wikidata
 - changed: agrelon cnt co sdo yago

 - made REVERSE reproducible
 - improved command line client

20130816 2013-08-16 (1109 prefixes)
 - added:   fea penis scms sdo wapp

 - improved update process
 - remove .bak files

20130812 2013-08-12 (1104 prefixes)
 - added:   lldr up
 - changed: copyright

20130802 2013-08-02 (1102 prefixes)
 - added:   algo bsb centrifuge cex cf cidoc crtv dbc dbnary dbpr dbt dctypes 
            dis dvia ebu ecb ecpo exterms frapo geof geofla gfo hifm httpm 
            iot itsrdf kbp l4lod laabs locwd mods namespaces nif nsl odcs oecd 
            omn opmw oslc pam penn pkgsrc ple poste premis prolog qrl qvoc 
            radion rdarole rdf123 reve rlno rlnr rlog roevo roterms sci sem 
            site stac stats wf4ever wfm wfs wikterms wl won worldbank
 - changed: b2bo biocore cito dita dso lgd lv oa osr pr req ro voaf

 - fixed bug in test of RDF::NS::Trine (https://github.com/nichtich/RDF-NS/issues/4)
 - rdfns now emits plain URLs without format

20130402 2013-04-02 (1033 prefixes)
 - added:   dcm gnvc occult pizza role
 - changed: w3po

 - fixed bug in PREFIXES  caused by returning from an each-loop

20130327 2013-03-27 (1028 prefixes)
 - added:   agls agrelon aigp aos api being bf bif biotop biro cb cgov city 
            cold coll comm coun cpa crsw csp ctorg dbtont dcite dcndl deo dl 