@@ -16,7 +16,7 @@ rdfns - look up common URI namespaces and prefixes
 
 =head1 VERSION
 
-version 20131002
+version 20131115
 
 =head1 SYNOPSIS
 
