@@ -1186,3 +1186,27 @@ yago	http://yago-knowledge.org/resource/	20130924
 cdtype	http://purl.org/cld/cdtype/	20131002
 fincaselaw	http://purl.org/finlex/schema/oikeus/	20131002
 finlaw	http://purl.org/finlex/schema/laki/	20131002
+amalgame	http://purl.org/vocabularies/amalgame#	20131115
+camelot	http://vocab.ox.ac.uk/camelot#	20131115
+conf	http://richard.cyganiak.de/2007/pubby/config.rdf#	20131115
+crv	http://purl.org/twc/vocab/datacarver#	20131115
+csm	http://purl.org/csm/1.0#	20131115
+curr	https://w3id.org/cc#	20131115
+dbrc	http://dbpedia.org/resource/Category:	20131115
+dbyago	http://dbpedia.org/class/yago/	20131115
+dso	http://purl.org/ontology/dso#	20131115
+frad	http://iflastandards.info/ns/fr/frad/	20131115
+frsad	http://iflastandards.info/ns/fr/frsad/	20131115
+gnd	http://d-nb.info/standards/elementset/gnd#	20131115
+gq	http://genomequest.com/	20131115
+hxl	http://hxl.humanitarianresponse.info/ns/#	20131115
+mp	http://jicamaro.info/mp#	20131115
+ogbd	http://www.ogbd.fr/2012/ontologie#	20131115
+olad	http://openlad.org/vocab#	20131115
+ox	http://vocab.ox.ac.uk/projectfunding#	20131115
+pat	http://purl.org/hpi/patchr#	20131115
+pext	http://www.ontotext.com/proton/protonext#	20131115
+qb4o	http://purl.org/olap#	20131115
+refe	http://orion.tw.rpi.edu/~xgmatwc/refe/	20131115
+swperson	http://data.semanticweb.org/person/	20131115
+ub	http://www.lehigh.edu/~zhp2/2004/0401/univ-bench.owl#	20131115
